Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.2.0
    mcMMO's config system has been rewritten
    Many config files are now generated on demand instead of being copied from within the JAR
    All config nodes that used to be styled with CamelCase now use hyphens (-) as spaces for readability and consistency
    All config nodes will now use Capital letters at the start of each nodes name and after each hyphen (-)
    All config nodes now include a comment with the default value of the node to use as reference
    Expanded settings relating to purging users who have not leveled or users who had not logged in for many months
    NOTE: Not every config key that was renamed will be listed here
    Fixed a bug where players who started at level 1 would not be purged from the DB for being "powerless"
    Fixed a potential bug where players could be awarded XP for cancelled tame events

    Exploit related config options will now be found in "exploit-prevention"
    Exploit Prevention's "EndermanEndermiteFarms" renamed -> "Endermen-Endermite-Fix"
    Added toggle for pistons marking natural blocks as unnatural after being moved to prevent afk stone farms
    Added toggle for marking spawned mobs for giving modified XP
    Added toggle for tamed mobs to give combat XP when struck

    Settings related to Player Leveling are now found in "player_leveling.conf"
    Player Leveling's "TruncateSkills" renamed -> "Reduce-Player-Skills-Above-Cap"
    Player Leveling's "StartingLevel" renamed -> "Player-Starting-Level"
    Retro mode setting's "Enable" renamed -> "Use-Retro-Mode"
    Added new toggles for enabling level caps (previously this was done by setting the value above 0)

    World Blacklist settings can now be found in "world_blacklist.conf"
    World Blacklist now includes examples

    Scoreboard settings can now be found in "scoreboard.conf"